[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Icons/open-folder.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/SupermercadoOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Screen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Jost-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Icons/toggle-button-right.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/toggle-button-left.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/open-folder-hover.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Screen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 990.0
margin_bottom = 566.0
custom_constants/separation = 20

[node name="TitleContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 970.0
margin_bottom = 61.0
custom_constants/separation = -5

[node name="LabelTitle" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_right = 970.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Spritesheet Generator"
align = 1
valign = 1

[node name="LabelAuthor" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
margin_top = 40.0
margin_right = 970.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 4 )
text = "by Firemanarg"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 970.0
margin_bottom = 546.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 337.0
margin_bottom = 465.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3
custom_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 337.0
margin_bottom = 109.0
custom_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 337.0
margin_bottom = 74.0
custom_constants/separation = 15
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 177.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 177.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Spritesheet Direction"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 34.0
margin_right = 177.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_top = 13.0
margin_right = 66.0
margin_bottom = 27.0
text = "Horizontal"

[node name="CheckButtonDirection" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 114.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
custom_icons/off = ExtResource( 6 )
custom_icons/on = ExtResource( 5 )
custom_styles/focus = SubResource( 3 )

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_top = 13.0
margin_right = 166.0
margin_bottom = 27.0
text = "Vertical"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 192.0
margin_right = 196.0
margin_bottom = 74.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 211.0
margin_right = 337.0
margin_bottom = 74.0

[node name="LabelCount" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 126.0
margin_bottom = 30.0
rect_min_size = Vector2( 126, 0 )
custom_fonts/font = SubResource( 1 )
text = "Column Count"
align = 1
valign = 1

[node name="LineEditCount" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 34.0
margin_right = 126.0
margin_bottom = 58.0
text = "1"
align = 1
caret_blink = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 337.0
margin_bottom = 109.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 18.0
margin_right = 318.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 5
alignment = 1

[node name="ButtonGenerate" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
margin_right = 148.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Generate"

[node name="ButtonExport" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/CenterContainer/HBoxContainer2"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Export PNG"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 337.0
margin_bottom = 123.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 337.0
margin_bottom = 465.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 337.0
margin_bottom = 32.0

[node name="LabelPathTitle" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_top = 1.0
margin_right = 301.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Selected Images"
align = 1
valign = 1

[node name="TextureButtonOpen" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 305.0
margin_right = 337.0
margin_bottom = 32.0
hint_tooltip = "Select Images"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )

[node name="TextEditImagesList" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 337.0
margin_bottom = 332.0
size_flags_vertical = 3
readonly = true

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 347.0
margin_right = 351.0
margin_bottom = 465.0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 361.0
margin_right = 970.0
margin_bottom = 465.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 599.0
margin_bottom = 455.0
expand = true
stretch_mode = 4

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 800.0
margin_bottom = 500.0
window_title = "Abrir Arquivo(s)"
resizable = true
mode = 1
access = 2
current_dir = "/Users/Usuario/Documents/Godot/Tools/Spritesheet-Generator"
current_path = "/Users/Usuario/Documents/Godot/Tools/Spritesheet-Generator/"

[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/CheckButtonDirection" to="." method="_on_CheckButtonDirection_toggled"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/LineEditCount" to="." method="_on_LineEditCount_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/CenterContainer/HBoxContainer2/ButtonGenerate" to="." method="_on_ButtonGenerate_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer/TextureButtonOpen" to="." method="_on_TextureButtonOpen_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
